# emacs-solidity-server

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/analysis/: definitions.rs
src/lsp/: handler.rs
src/project/: mod.rs  remappings.rs  root.rs
src/solc/: fetch.rs  global.rs  manager.rs  mod.rs  platform.rs  switcher.rs  versions.rs
src/util/: fs.rs  imports.rs  log.rs  mod.rs  position.rs  text.rs
