[package]
name = "emacs-solidity-server"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lsp-types = "0.95.1"
tempfile = "3.8"
regex = "1.11.1"
pathdiff = "0.2"
once_cell = "1.21.3"
dirs = "5.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sha2 = "0.10"
anyhow = "1.0.98"
semver = "1.0.26"
which = "8.0.0"
